--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-</div>
-<div>
-  <a routerLink="">Home</a>
-  <span>|</span>
-  <a routerLink="about">About</a>
-</div>
+<header>
+  <h1>My Tunes</h1>
+</header>
+<hr>
 <router-outlet></router-outlet>
-<pre>{{ dogs | json}}</pre>
