--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~assets/sass/fonts.scss';
+@import '~assets/sass/config.scss';
+
+// global classes
+@import '~assets/sass/global/resets.scss';
+@import '~assets/sass/global/errors.scss';
 
 body {
     margin: 0;
