font-awesome addtiion

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<header class="app_header">
+  <fa class="bars_ico" name="bars" size="lg"></fa>
+  <h1>My Tunes</h1>
+  <img src="/assets/images/logo.ico" alt="logo">
+</header>
+
