adding footer and window event listener as hostEvents

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,12 @@
     height: auto;
 
     .main_container {
-        min-height: calc(100vh - #{$header-height}px);
+        min-height: $page-min-height;
+        background-color: $page_bg;
+        overflow: initial;
+
+        .mat-drawer {
+            overflow: initial;            
+        }
     }
 }
