--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="app_header">
+<header #appHeader class="app_header">
   <fa class="bars_ico" name="bars" size="lg" (click)="toggleSideNav()"></fa>
   <img src="/assets/images/logo.ico" alt="logo">
   <h1>My Tunes</h1>
