--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,7 @@
     display: block;
     height: $header-height + px;
     z-index: map-get($z-indexes, 'header');
+    position: relative;
 
     .app_header {
         position: fixed;
