--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,7 +1,17 @@
-<nav>
-  <a href="">link this</a>
-  <a href="">link this</a>
-  <a href="">link this</a>
-  <a href="">link this</a>
-  <a href="">link this</a>
+<nav #appSideNav class="side_nav_container">
+  <a class="nav_btn" href="/login">
+    <fa name="home" size="lb" class="nav_ico"></fa>
+    <span class="nav_txt">Home Page</span>
+  </a>
+  <!--[router-link]-->
+
+  <a class="nav_btn" href="#">
+    <fa name="user" size="lb" class="nav_ico"></fa>
+    <span class="nav_txt">Personal Area</span>
+  </a>
+
+  <a class="nav_btn" href="#">
+    <fa name="info-circle" size="lb" class="nav_ico"></fa>
+    <span class="nav_txt">About us</span>
+  </a>
 </nav>
