--- a/src/assets/sass/global/resets.scss
+++ b/src/assets/sass/global/resets.scss
@@ -14,6 +14,16 @@ output, ruby, section, summary, time, mark, audio, video {
   vertical-align: baseline; 
 }
 
+a, a:hover, a:active, a:focus {
+  outline: 0;
+  color:inherit;
+  text-decoration: none;
+  
+  h1:hover, h2:hover, h3:hover, h4:hover, h5:hover {
+    text-decoration: none;
+  }
+}
+
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; 
 }
