adding event listiners

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
-<mat-drawer-container autosize class="main_container">
+<mat-drawer-container #okay autosize class="main_container">
   <mat-drawer #drawer mode="side">
-      <app-side-nav></app-side-nav>
+      <app-side-nav ng-if="(isSideNavOpen)"></app-side-nav>
   </mat-drawer>
 
   <router-outlet></router-outlet>
