--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,9 +1,8 @@
-<nav #appSideNav class="side_nav_container">
+<nav class="side_nav_container">
   <a class="nav_btn" href="/login">
     <fa name="home" size="lb" class="nav_ico"></fa>
     <span class="nav_txt">Home Page</span>
   </a>
-  <!--[router-link]-->
 
   <a class="nav_btn" href="#">
     <fa name="user" size="lb" class="nav_ico"></fa>
