--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<mat-drawer-container #okay autosize class="main_container">
+<mat-drawer-container autosize class="main_container">
   <mat-drawer #drawer mode="side">
       <app-side-nav ng-if="(isSideNavOpen)"></app-side-nav>
   </mat-drawer>
