--- a/src/assets/sass/config.scss
+++ b/src/assets/sass/config.scss
@@ -8,7 +8,7 @@
 
 $header-height: 50;
 $footer-height: 25;
-$page-min-height: calc(3000px - #{$header-height}px - #{$footer-height}px);
+$page-min-height: calc(100vh - #{$header-height}px - #{$footer-height}px);
 
 
 $red: #FF0000;
