additon of some other effects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <mat-drawer-container autosize class="main_container">
   <mat-drawer #drawer mode="side">
-      <app-side-nav ng-if="(isSideNavOpen)"></app-side-nav>
+      <app-side-nav ng-if="(isSideNavOpen)" [is-open]="isSideNavOpen"></app-side-nav>
   </mat-drawer>
 
   <router-outlet></router-outlet>
