--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -4,6 +4,7 @@
     display: block;
     width: 260px;
     height: 100%;
+    position: relative;
 
     .side_nav_container {
         display: flex;
@@ -14,7 +15,13 @@
         flex-direction: column;
         max-height: $page-min-height;
         overflow-y: scroll;
+        overflow-x: hidden;
+        opacity: 0;
+        @include full-transition(opacity .6s);
 
+        &.open {
+            opacity: 1;
+        }
         .nav_btn {
             @include medium-font();
             line-height: px-to-em(40px);
