--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,5 @@
 <header #appHeader class="app_header">
   <fa class="bars_ico" name="bars" size="lg" (click)="toggleSideNav()"></fa>
   <img src="/assets/images/logo.ico" alt="logo">
-  <h1>My Tunes</h1>
+  <h1>{{ 'header.title' | translate }}</h1>
 </header>
-
