--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,10 @@
   <mat-drawer #drawer mode="side">
       <app-side-nav ng-if="(isSideNavOpen)" [is-open]="isSideNavOpen"></app-side-nav>
   </mat-drawer>
-
-  <router-outlet></router-outlet>
+  
+  <mat-drawer-content class="page_content">
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
 </mat-drawer-container>
 
 <app-footer></app-footer>
