--- a/src/assets/sass/config.scss
+++ b/src/assets/sass/config.scss
@@ -6,10 +6,11 @@
 @import "mixins/scrollbar.scss";
 @import "mixins/utils.scss";
 @import "mixins/transitions.scss";
+@import "mixins/media.scss";
 
 $header-height: 50;
 $footer-height: 25;
-$page-min-height: calc(3000px - #{$header-height}px - #{$footer-height}px);
+$page-min-height: calc(100vh - #{$header-height}px - #{$footer-height}px);
 
 
 $red: #FF0000;
@@ -21,14 +22,21 @@ $primary_red: #e74a43;
 $primary_pale: rgba(42, 127, 184, 0.5);
 $page_bg: #fafafa;
 
-$media-breakpoints: (
+$breakpoints: (
   'iphone': 320px,
   'phone': 480px,
   'ipad': 768px,
-  'tablet': 1024px,
-  'laptop': 1224px,
+  'tablet': 992px,
+  'laptop': 1200px,
   'desktop': 1824px
 );
+/**
+  Media breaking-poitns must fit with bootstrap breaking points
+  xs - < 768px
+  sm - > 768px ~ 992px
+  md - > 992px ~ 1200px
+  lg - < 1200px
+**/
 
 $z-indexes : (
   header: 100,
